--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -1,8 +1,9 @@
 # Copyright (c) 2020 Ryan Cross
 # SPDX-License-Identifier: MIT
 
-# Uncomment the following line to enable the Sofle OLED Display
+# Uncomment the following line to enable the Sofle OLED Display and WPM widget
 CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 
 # Uncomment these two lines to add support for encoders
 CONFIG_EC11=y
